# featureiq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: contributing_rules.md
featureiq/: __init__.py  core.py  exceptions.py
featureiq/ontology/: engine.py  rule_loader.py
featureiq/ontology/rules/: anomaly.yaml  categorical.yaml  multicollinearity.yaml  numerical.yaml  target.yaml  temporal.yaml
featureiq/profiler/: column_profiler.py  dataset_profiler.py  meta_features.py
featureiq/recommender/: fallback.py  meta_learner.py  openml_collector.py
featureiq/recommender/pretrained/: README.md
featureiq/transformer/: pipeline_builder.py  registry.py
featureiq/utils/: logging.py  validation.py
scripts/: collect_openml_data.py  train_meta_learner.py
tests/: conftest.py  test_core.py  test_exceptions.py  test_utils.py
tests/test_ontology/: test_engine.py  test_rule_loader.py
tests/test_profiler/: test_column_profiler.py  test_dataset_profiler.py  test_meta_features.py
tests/test_recommender/: test_meta_learner.py  test_openml_collector.py
tests/test_transformer/: test_new_transformers.py  test_pipeline_builder.py
