[tool.poetry]
name = "featureiq"
version = "0.1.0"
description = "A knowledge graph and meta-learning framework for context-aware automated feature engineering"
authors = ["Pratik Khedekar <khedekarpratik0337@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/khedekarpratik0337/featureiq"
repository = "https://github.com/khedekarpratik0337/featureiq"
keywords = ["feature engineering", "automl", "meta-learning", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "featureiq"}]
include = [
    "featureiq/ontology/rules/*.yaml",
    "featureiq/recommender/pretrained/*.joblib",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=1.5.0,<3.0.0"
numpy = ">=1.23.0,<2.0.0"
scikit-learn = ">=1.2.0,<2.0.0"
pydantic = ">=2.0.0"
pyyaml = ">=6.0"
scipy = ">=1.10.0"
joblib = ">=1.2.0"
rich = ">=13.0.0"
lightgbm = {version = ">=3.3.0", optional = true}
openml = {version = ">=0.14.0", optional = true}

[tool.poetry.extras]
meta = ["lightgbm", "openml"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.4.0"
pre-commit = ">=3.3.0"
lightgbm = ">=3.3.0"
openml = ">=0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=featureiq --cov-report=term-missing"
